# vocalpoint

./: .gitignore  .gitmodules  README.md  pubspec.yaml
android/app/: build.gradle.kts
app-flutter/vocalpoint_app/: README.md  pubspec.yaml
esp32/: .gitignore  Doxyfile  sdkconfig.old
esp32/.claude/: settings.json
esp32/doc/: styles.css
esp32/main/: CMakeLists.txt
esp32/main/inc/: ble_gatt_server.h  ble_manager.h  i2c_protocol.h  log.h  main.h  state.h
esp32/main/include/: ble_gatt_server.h  configs.h  i2c.h  i2c_protocol.h  shared_state.h  state.h
esp32/main/src/: ble_gatt_server.c  ble_manager.c  i2c.c  i2c_bridge.c  main.c  shared_state.c  state.c
firmware-esp32/: CMakeLists.txt
firmware-esp32/vocalpoint_fw/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
rpi/: audio.py  audio_api.py  beamform.py  bt.py  config.py  denoise.py  i2c.py  localization.py  main.py  mic2airpods_boot.py  process_audio.py  setup_first_time.py  speech_enhancement_callback.py  start.sh  startup.sh  stream.py  usb.py  wifi.py  xiao_link_i2c.py
test/: widget_test.dart
tests/: test_rpi_process_audio.py  test_validation_workflow.py
validate/: __init__.py  collect_clean_speaker.py  collect_noise.py  common.py  run_localization.py  run_pyrnnoise_raw.py  run_rnnoise_single_channel.py  validate_from_bulk_speaker_and_noise.py  validate_from_speaker_and_noise.py
vocalpoint_ble/: .gitignore  README.md  sdkconfig.defaults
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+185 files in other folders)
